# ocv2scratch

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IntroConfig.h  IntroConfig.h.in  Makefile  README.md  bgrToGray.cpp  cmake_install.cmake  draw.cpp  extractMetrics.cpp  imreading.cpp  mask.cpp  ocv.h  plot.cpp  read  simple  simple.cpp  split.cpp  traverseImages.cpp  ver  version.cpp
matlabSummary1/: a_color.fig  col.fig  col_mean.csv  createTopographColorMap.m  drawCTCM.m  ir.fig
matlabSummaryStastics/: ch2.fig  col_stdDev_ir.csv  colorMean.fig  colorStdDev.fig  drawCTCM.m~  irHist.fig  irMean.fig  irStdDev.fig
matlabSummaryStastics/a_img/: a_boolValues.csv  a_mean_color.csv  a_mean_ir.csv  a_stdDev_color.csv  a_stdDev_ir.csv  ch1.fig  ch2.fig  ch3.fig  colorMean.fig  colorStdDev.fig  createGrid.m  drawCTCM.m  gray.fig  irHist.fig  irMean.fig  irStdDev.fig
matlabSummaryStastics/b_img/: b_boolValues.csv  b_mean_color.csv  b_mean_ir.csv  b_stdDev_color.csv  b_stdDev_ir.csv  ch1.fig  ch2.fig  ch3.fig  colorMean.fig  colorStdDev.fig  gray.fig  h5plot.m  irHist.fig  irMean.fig  irStdDev.fig
matlabSummaryStastics/c_img/: ch1.fig  ch3.fig  col_boolValues.csv  col_mean_color.csv  col_mean_ir.csv  col_stdDev_color.csv  gray.fig
matlabSummaryStastics/m/: createTopograph.m  createTopographColorMap.m
